--- a/store/templates/store/userdashboard/orderplaced.html
+++ b/store/templates/store/userdashboard/orderplaced.html
@@ -12,7 +12,8 @@
         <span class="icon-check_circle display-3 text-success"></span>
         <h2 class=" text-black display-3  ">Thank you!</h2><br>
         <p class="lead mb-5 text-success">You order was successfuly completed &#x2713;</p>
-        <p><a href={% url 'loggedinproduct' %} class="btn  stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-3">Back to shop</a></p>
+        <h4 class=" text-black  ">Total Amount : Rs.{{ordertotal}} /-</h4>
+        <p><a href={% url 'loggedinproduct' %} class="btn  stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-5 pt-2">Back to shop</a></p>
       </div>
 
       <div class="col-md-5">
@@ -29,7 +30,7 @@
               <p class="card-text"><strong> Quantity:</strong>      {{data.quantity}}</p>
               <p class="card-text"><strong> Order Date:</strong>  {{data.orderdate}}  </p>
               <p class="card-text"><strong> Shipping Address:</strong>   {{data.address}} </p>
-              <p class="card-text"><strong>  Amount:</strong>  {{data.finalprice}}</p>
+              <p class="card-text"><strong>  Product Price:</strong>  {{data.finalprice}}</p>
               <br><br><hr>
               {% endfor %}
           </div>
