--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -178,7 +178,7 @@
                 <div class="mt-3">
                     <label for="email">Phone Number:</label>
                     <span class="ml-5" id="email">{{customerobj.phonenumber}}</span>
-                  </div>
+                </div>
                   
                   <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 mt-3"  data-bs-toggle="modal" data-bs-target="#editdata-{{forloop.counter}}" > Edit Details</button>
 
@@ -191,7 +191,44 @@
             
               
                   
-              </div>
+            </div>
+
+            <div class="row mt-4 ml-1">
+
+              <div class=" ">
+                <div class="mt-3">
+                   <label class="block1-name ltext-102 trans-04 p-b-8" for="">Your Addresses</label> 
+                </div>
+                 
+                   <div>
+       
+                   <ol>
+                       {% for addressobj in addressobjs  %}
+                       <li class="ml-5">
+                           {{addressobj.house}} , {{addressobj.locality}} , {{addressobj.district}}
+                            <div>{{addressobj.state}} , {{addressobj.country}}</div>
+                            <div>Pincode : {{addressobj.pincode}}</div>
+                            
+                       </li>
+                       
+   
+                       <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
+                       <hr>
+                       {% endfor %}
+                   </ol>
+   
+                   
+   
+       
+                   </div>
+                   <button style="margin-left:190px;" id="addaddress" class="flex-c-m stext-101 cl0 btn bg1  hov-btn2 p-lr-15 trans-04  mt-5 text-center"  >&#43; Add New Address </button>
+   
+                   {% comment %} <button class="btn btn-warning mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button> {% endcomment %}
+           </div>
+
+
+
+            </div>
               
 
 
@@ -222,6 +259,7 @@
         {% comment %} Edit User Details Modal {% endcomment %}
 
         <div class="modal fade mt-5" id="editdata-{{forloop.counter}}" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+          <br><br><br>
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -355,12 +393,17 @@
                             <td>{{ item.slno }}</td>
                             <td>{{ item.totalamount }}</td>
                             {% if item.coupon.code %}
-                            <td>{{ item.coupon.code }} Applied &#x2713; </td>
+                            <td class="text-success">{{ item.coupon.code }} Coupon Applied &#x2713; </td>
                             {% else %}
-                            <td>No Coupon Applied</td>  
+                            <td class="text-danger">No Coupon</td>  
                             {% endif %}
                             <td>{{ item.ordertime }}</td>
-                            <td><a class="btn btn-success" href={% url 'orderdetails'  item.id  %}>View details</a></td>
+                            <td><a style="color:#717fe0;" class=""  href={% url 'orderdetails'  item.id  %}> View details <i class="fas fa-angle-double-right"></i>
+
+
+
+
+                            </a></td>
                           </tr>
                        
                        
@@ -407,38 +450,7 @@
     </div>
 
 
-    <div class="row mt-3">
-        <div class="col-md-4 border border-1">
-            <div class="mt-3">
-                <label class="block1-name ltext-102 trans-04 p-b-8" for="">Your Addresses</label> 
-              </div>
-              
-                <div>
     
-                <ol>
-                    {% for addressobj in addressobjs  %}
-                    <li class="ml-5">
-                        {{addressobj.house}} , {{addressobj.locality}} , {{addressobj.district}}
-                         <div>{{addressobj.state}} , {{addressobj.country}}</div>
-                         <div>Pincode : {{addressobj.pincode}}</div>
-                         
-                    </li>
-                    
-
-                    <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04  mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button>
-                    <hr>
-                    {% endfor %}
-                </ol>
-
-                
-
-    
-                </div>
-                <button style="margin-left:190px;" id="addaddress" class="flex-c-m stext-101 cl0 btn bg1  hov-btn2 p-lr-15 trans-04  mt-5 text-center"  >&#43; Add New Address </button>
-
-                {% comment %} <button class="btn btn-warning mt-3"  data-bs-toggle="modal" data-bs-target="#editaddress-{{forloop.counter}}" > Edit Address</button> {% endcomment %}
-        </div>
-    </div>
 </div> 
 
 {% comment %} Edit Address Modal {% endcomment %}
