--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -208,7 +208,8 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="#"><img src="{% static 'store/images/icons/sk8 factory - logo.svg' %}" alt="IMG-LOGO"></a>
+				
 			</div>
 
 			<!-- Icon header -->
@@ -217,11 +218,11 @@
 					<i class="zmdi zmdi-search"></i>
 				</div>
 
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
+				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="{{no_of_cart_items}}">
 					<i class="zmdi zmdi-shopping-cart"></i>
 				</div>
 
-				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
+				<a href={% url 'wishlist' %} class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="{{no_of_wishlist_items}}">
 					<i class="zmdi zmdi-favorite-outline"></i>
 				</a>
 			</div>
@@ -237,7 +238,7 @@
 
 		<!-- Menu Mobile -->
 		<div class="menu-mobile">
-			<ul class="topbar-mobile">
+			{% comment %} <ul class="topbar-mobile">
 				<li>
 					<div class="left-top-bar">
 						Free shipping for standard order over $100
@@ -263,15 +264,16 @@
 						</a>
 					</div>
 				</li>
-			</ul>
+			</ul> {% endcomment %}
 
 			<ul class="main-menu-m">
 				<li>
-					<a href="index.html">Home</a>
+					<a href={% url 'loggedin' %}>Home</a>
 					<ul class="sub-menu-m">
-						<li><a href="index.html">Homepage 1</a></li>
+					
+						{% comment %} <li><a href="index.html">Homepage 1</a></li>
 						<li><a href="home-02.html">Homepage 2</a></li>
-						<li><a href="home-03.html">Homepage 3</a></li>
+						<li><a href="home-03.html">Homepage 3</a></li> {% endcomment %}
 					</ul>
 					<span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -279,23 +281,17 @@
 				</li>
 
 				<li>
-					<a href={% url 'shop' %}>Shop</a>
+					<a href={% url 'loggedinproduct' %}>Shop</a>
+				</li>
+
+		
+
+				<li>
+					<a href={% url 'loggedinabout' %}>About</a>
 				</li>
 
 				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
-				</li>
-
-				<li>
-					<a href="blog.html">Blog</a>
-				</li>
-
-				<li>
-					<a href="about.html">About</a>
-				</li>
-
-				<li>
-					<a href="contact.html">Contact</a>
+					<a href={% url 'loggedincontact' %}>Contact</a>
 				</li>
 			</ul>
 		</div>
