some UI updates

--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -443,7 +443,7 @@
 								
 							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
 								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-									GRAFFITI DESIGNS!
+									SLEEK DESIGN!
 								</h2>
 							</div>
 								
@@ -496,7 +496,7 @@
 								
 							<div class="layer-slick1 animated visible-false" data-appear="rotateInUpRight" data-delay="800">
 								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-									Latest Designs
+									Freedom on Wheels!
 								</h2>
 							</div>
 								
@@ -1100,11 +1100,11 @@
 							<div class="focus-input1 trans-04"></div>
 						</div>
 
-						<div class="p-t-18">
+						{% comment %} <div class="p-t-18">
 							<button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04">
 								Subscribe
 							</button>
-						</div>
+						</div> {% endcomment %}
 					</form>
 				</div>
 			</div>
