--- a/store/templates/store/guestpreview.html
+++ b/store/templates/store/guestpreview.html
@@ -216,7 +216,7 @@
                             </div>
 
                             <!--  -->
-                            <div class="flex-w flex-m p-l-100 p-t-40 respon7">
+                            {% comment %} <div class="flex-w flex-m p-l-100 p-t-40 respon7">
                                 <div class="flex-m bor9 p-r-10 m-r-11">
                                     <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
                                         <i class="zmdi zmdi-favorite"></i>
@@ -234,7 +234,7 @@
                                 <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
-                            </div>
+                            </div> {% endcomment %}
                         </div>
                     </div> 
                 </div>
