active class removed

--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -93,7 +93,7 @@
 					<!-- Menu desktop -->
 					<div class="menu-desktop">
 						<ul class="main-menu">
-							<li class="active-menu">
+							<li class="">
 								<a href={% url 'index' %}>Home</a>
 								{% comment %} <ul class="sub-menu">
 									<li><a href="index.html">Homepage 1</a></li>
