--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -110,7 +110,7 @@
 					<!-- Menu desktop -->
 					<div class="menu-desktop">
 						<ul class="main-menu">
-							<li class="active-menu">
+							<li class="">
 								<a href={% url 'loggedin' %}>Home</a>
 								{% comment %} <ul class="sub-menu">
 									<li><a href="index.html">Homepage 1</a></li>
