--- a/store/templates/store/userdashboard/deliveredproducts.html
+++ b/store/templates/store/userdashboard/deliveredproducts.html
@@ -17,6 +17,7 @@
 
   <div class="container-fluid">
     <div class="row mt-5">
+      {% if orderobjs %}
         <table class="table">
             <thead>
               <tr>
@@ -71,6 +72,9 @@
               {% endfor %}
             </tbody>
           </table>
+          {% else %}
+          <h3 class="text-danger">No orders yet!</h3>
+          {% endif %}
     
     </div>
 
