--- a/store/templates/store/userdashboard/userprofile.html
+++ b/store/templates/store/userdashboard/userprofile.html
@@ -134,7 +134,7 @@
     <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
       <a class="dropdown-item" href={% url 'wallet' %}> 
          <div class="" style="color:#717fe0;">
-           <i class="fas fa-wallet"></i> <span style="color:black;">Your wallet</span>
+           <i class="fas fa-wallet"></i> <span style="color:black;"> Wallet</span>
          </div>
       </a>
       <a style="color:#717fe0" class="dropdown-item" href={% url 'deliveredproducts' %}>
@@ -158,7 +158,7 @@
 
 
             <div class="container formcont">
-                <h1 class="block1-name ltext-102 trans-04 p-b-8">Your Details</h1>
+                <h1 class="block1-name ltext-102 trans-04 p-b-8">Details</h1>
                 <div >
                     <label  for="name">Username:</label>
                     <span class="ml-5" id="name">{{username}}</span>
@@ -197,11 +197,11 @@
 
               <div class=" ">
                 <div class="mt-3">
-                   <label class="block1-name ltext-102 trans-04 p-b-8" for="">Your Addresses</label> 
+                   <label class="block1-name ltext-102 trans-04 p-b-8" for="">Addresses</label> 
                 </div>
                  
                    <div>
-       
+                    {% if addressobjs %}
                    <ol>
                        {% for addressobj in addressobjs  %}
                        <li class="ml-5">
@@ -216,6 +216,11 @@
                        <hr>
                        {% endfor %}
                    </ol>
+                   {% else %}
+                   <br><br>
+                   <h4 class="block1-name ltext-10 trans-04 p-b-8 text-danger">Address not added!</h4>
+
+                   {% endif %}
    
                    
    
@@ -363,13 +368,14 @@
                 
                 <div class="row">
                   <span class="block1-name ltext-102 trans-04 p-b-8 mt-3">
-                      Your Orders
+                      Orders
                   </span>
                   <div class="row mt-5"></div>
                   <div class="row mt-5"></div>
               </div>
 
               <hr>
+              {% if ordernumberobjs %}
               <div class="row">
                   <table class="table table-hover">
                       <thead>
@@ -416,6 +422,13 @@
                   
           
               </div>
+              {% else %}
+              <span class="block1-name ltext-101 trans-04 p-b-8 mt-3 text-danger">
+                No Orders Yet!
+            </span>
+              {% endif %}
+            
+
                
                 
             </div>
@@ -560,7 +573,7 @@
           </button>
         </div>
         <div class="modal-body p-5">
-          <p > <h5 style="color:green;"> New address is addded &#x2713; </h5></p>
+          <p > <h5 style="color:green;"> New address is added &#x2713; </h5></p>
         </div>
         {% comment %} <div class="modal-footer">
           <button type="button" class="btn btn-secondary closeit" data-dismiss="modal">Close</button>
